--- a/Contacto.html
+++ b/Contacto.html
@@ -52,15 +52,8 @@
                             <li><a href="Juegos.html">Juegos Infantiles</a></li>
                             <li><a href="Deportes.html">Deportes y Ejercicios</a></li>
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
-<!--                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
-                            <li class="divider"></li>
-                            <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>-->
                         </ul>
                     </li>
-                    <!--<li><a href="Blog.html">Blog</a></li>--> 
                     <li class="active"><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -71,7 +64,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <h4>Formulario de Contacto</h4>
-                <!--<div class="status alert alert-success"<?php $display?>>Mensaje enviado con exito</div>-->
+                <div class="status alert alert-success" style="display: none"></div>
                 <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php" role="form">
                     <div class="row">
                         <div class="col-sm-10">
@@ -105,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    <!--&copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.-->
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
