--- a/Deportes.html
+++ b/Deportes.html
@@ -46,7 +46,6 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <!--<li><a href="Servicios.html">Servicios</a></li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
@@ -61,39 +60,14 @@
                             <li><a href="Juegos.html">Juegos Infantiles</a></li>
                             <li class="active"><a href="Deportes.html">Deportes y Ejercicios</a></li>
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
-<!--                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="404.html">404</a></li>
-                            <li><a href="registratiBlog Singleon.html">Registration</a></li>
-                            <li class="divider"></li>
-                            <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>-->
                         </ul>
                     </li>
-                    <!--<li><a href="Blog.html">Blog</a></li>--> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </header><!--/header-->
-
-<!--    <section id="title" class="emerald">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h1>Blog Item</h1>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
-                </div>
-                <div class="col-sm-6">
-                    <ul class="breadcrumb pull-right">
-                        <li><a href="Index.html">Home</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li class="active">Blog Item</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>/#title-->
-
+    
     <section id="blog" class="container">
         <div class="row">
             <aside class="col-sm-4 col-sm-push-8">
@@ -293,13 +267,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    <!--&copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.-->
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Nosotros.html">Nosotros</a></li>
-                        <!--<li><a href="#">Faq</a></li>-->
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
