--- a/Moviliario.html
+++ b/Moviliario.html
@@ -37,7 +37,6 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <!--<li><a href="Servicios.html">Servicios</a></li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
@@ -52,15 +51,8 @@
                             <li><a href="Juegos.html">Juegos Infantiles</a></li>
                             <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
                             <li class="active"><a href="Moviliario.html">Moviliario Urbano</a></li>
-<!--                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>
-                            <li class="divider"></li>
-                            <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>-->
                         </ul>
                     </li>
-                    <!--<li><a href="Blog.html">Blog</a></li>--> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -118,14 +110,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    <!--&copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.-->
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Nosotros.html">Nosotros</a></li>
-                        <!--<li><a href="#">Faq</a></li>-->
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="Contacto.html">Contacto</a></li>
                         <li><a id="gototop" class="gototop" href="#"><i class="icon-chevron-up"></i></a></li><!--#gototop-->
                     </ul>
                 </div>
