--- a/Servicios.html
+++ b/Servicios.html
@@ -37,12 +37,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <!--<li class="active"><a href="Servicios.html">Servicios</a></li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
+                            <li><a href="Garantia.html">Garantia</a></li>
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
