--- a/Portfolio.html
+++ b/Portfolio.html
@@ -63,66 +63,148 @@
     <section id="portfolio" class="container">
         <ul class="portfolio-filter">
             <li><a class="btn btn-default active" href="#" data-filter="*">Todas</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".bootstrap">Bootstrap</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".html">HTML</a></li>
-            <li><a class="btn btn-default" href="#" data-filter=".wordpress">Wordpress</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".Juegos">Juegos Infantiles</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".Ejercicio">Ejercicio</a></li>
+            <li><a class="btn btn-default" href="#" data-filter=".Moviliario">Moviliario Urbano</a></li>
         </ul><!--/#portfolio-filter-->
 
         <ul class="portfolio-items col-3">
-            <li class="portfolio-item html">
+            <li class="portfolio-item Juegos"><!--/.01-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item1.jpg" alt="">
+                    <img src="images/portfolio/imag 01.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>             
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 01.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>             
                     </div>           
                 </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item bootstrap">
+            </li>
+             <li class="portfolio-item Moviliario"><!--/.02-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item2.jpg" alt="">
+                    <img src="images/portfolio/imag 40.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item2.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>              
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 40.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
                     </div>           
                 </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item bootstrap">
+            </li>
+            <li class="portfolio-item Juegos"><!--/.03-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item3.jpg" alt="">
+                    <img src="images/portfolio/imag 04.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item3.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>        
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 04.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>        
                     </div>           
                 </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item wordpress">
+            </li> 
+            <li class="portfolio-item Moviliario"><!--/.04-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item4.jpg" alt="">
+                    <img src="images/portfolio/imag 06.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item4.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 06.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
                     </div>           
                 </div>           
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item html">
+            </li>
+            <li class="portfolio-item Moviliario"><!--/.05-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item5.jpg" alt="">
+                    <img src="images/portfolio/imag 05.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item5.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 05.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>          
                     </div>    
                 </div>       
-            </li><!--/.portfolio-item-->
-            <li class="portfolio-item html">
+            </li>
+            <li class="portfolio-item Juegos"><!--/.06-->
                 <div class="item-inner">
-                    <img src="images/portfolio/thumb/item6.jpg" alt="">
+                    <img src="images/portfolio/imag 29.jpg" alt="">
                     <h5>Lorem ipsum dolor sit amet</h5>
                     <div class="overlay">
-                        <a class="preview btn btn-danger" href="images/portfolio/full/item6.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 29.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
                     </div>           
                 </div>           
-            </li><!--/.portfolio-item-->
+            </li>
+            <li class="portfolio-item Moviliario"><!--/.07-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 15.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 15.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li>
+            <li class="portfolio-item Ejercicio"><!--/.08-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 22.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 22.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li> 
+            <li class="portfolio-item Moviliario"><!--/.09-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 38.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 38.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li> 
+            <li class="portfolio-item Juegos"><!--/.10-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 02.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 02.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>              
+                    </div>           
+                </div>           
+            </li>
+            <li class="portfolio-item Ejercicio"><!--/.11-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 20.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 20.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li> 
+            <li class="portfolio-item Ejercicio"><!--/.12-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 19.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 19.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li> 
+          
+            <li class="portfolio-item Juegos"><!--/.13-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 18.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 18.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li> 
+            <li class="portfolio-item Moviliario"><!--/.14-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 41.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 41.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li>
+            <li class="portfolio-item Ejercicio"><!--/.15-->
+                <div class="item-inner">
+                    <img src="images/portfolio/imag 24.jpg" alt="">
+                    <h5>Lorem ipsum dolor sit amet</h5>
+                    <div class="overlay">
+                        <a class="preview btn btn-danger" href="images/portfolio/imag 24.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>           
+                    </div>           
+                </div>           
+            </li>
         </ul>
     </section><!--/#portfolio-->
 
