--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="carousel-content center centered">
-                                    <h2 class="boxed animation animated-item-1">Creando Diversion</h2>
-                                    <p class="boxed animation animated-item-2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                                <div class="carousel-content centered">
+                                    <h2 class="animation animated-item-1">Hábitos Sanos Para Usted y Su Familia.</h2>
+                                    <!--<p class="animation animated-item-2">Para Usted y Su Familia.</p>-->
                                     <br>
-                                    <a class="btn btn-md animation animated-item-3" href="#">Learn More</a>
+                                    <!--<a class="btn btn-md animation animated-item-3" href="#">Learn More</a>-->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div><!--/.item-->
-                <div class="item" style="background-image: url(images/slider/bg3.jpg)">
+<!--                <div class="item" style="background-image: url(images/slider/bg3.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-6">
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div><!--/.item-->
             </div><!--/.carousel-inner-->
         </div><!--/.carousel-->
